challenge,sevice,gallery by vannhut

--- a/index.html
+++ b/index.html
@@ -203,6 +203,194 @@
     </section>
     <!-- CHALLENGES -->
 
+    <!-- EVERY DAY BRINGS NEW CHALLENGES -->
+    <section id="challenge">
+        <div class="challenge__container container">
+            <div class="row">
+                <div class="col-lg-12 col-xl-6">
+                    <div class="challenge__title text-left ">
+                        <p>EVERY DAY BRINGS NEW CHALLENGES</p>
+                        <h1>Creative agency focused on <br /> vision, product and people</h1>
+                        <p>Aurabitur id gravida risus. Fusce eget ex fermentum, ultricies nisi ac sed,<br />
+                            lacinia est. Quisque ut lectus consequat, venenatis eros et, sed commodo <br />
+                            risus. Nullam sit amet laoreet elit. Suspendisse non init magnaa velit <br />
+                            efficitur, dolor eget ex fermentum.
+
+                        </p>
+                        <button class="btn btn-success px-5 py-2 my-5 text-white font-weight-bold rounded-lg">Discover
+                            More</button>
+                    </div>
+                </div>
+                <div class="col-lg-12 col-xl-6">
+                    <div class="row">
+                        <div class="col-6">
+                            <div class="challenge__content">
+                                <img src="./img/icon1.png" alt="#" />
+                                <p>Our Process</p>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="challenge__content">
+                                <img src=" ./img/icon2.png" alt="#" />
+                                <p>How We Help</p>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="challenge__content">
+                                <img src="./img/icon3.png" alt="#" />
+                                <p>UI/UX Design</p>
+                            </div>
+                        </div>
+                        <div class="col-6">
+                            <div class="challenge__content">
+                                <img src="./img/icon4.png" alt="#" />
+                                <p>Creative Ideas</p>
+                            </div>
+                        </div>
+
+
+                    </div>
+
+                </div>
+
+            </div>
+
+        </div>
+
+    </section>
+     <!-- sevice -->
+     <section id="sevice">
+        <div class="sevice__title">
+            <h1>Always there for your care, our Services</h1>
+        </div>
+        <div class="sevice__select">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-4 col-lg-6 col-md-12">
+                        <div class="sevice__card">
+                            <div class="sevice__card-image">
+                                <img src="./img/s1.jpg" alt="#">
+                                <button class="btn__sevice">Work Expertise</button>
+                            </div>
+                            <p>Venenatis eros et, sed commodo risus.<br />
+                                Nullam sit amet laoreet elit..</p>
+                            <button class="btn__learMore">Lear More</button>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-6 col-md-12">
+                        <div class="sevice__card">
+                            <div class="sevice__card-image">
+                                <img src="./img/s2.jpg" alt="#">
+                                <button class="btn__sevice">Product Development</button>
+                            </div>
+                            <p>Venenatis eros et, sed commodo risus.<br />
+                                Nullam sit amet laoreet elit..</p>
+                            <button class="btn__learMore">Lear More</button>
+                        </div>
+                    </div>
+                    <div class="col-xl-4 col-lg-6 col-md-12">
+                        <div class="sevice__card">
+                            <div class="sevice__card-image">
+                                <img src="./img/s3.jpg" alt="#">
+                                <button class="btn__sevice">Softwave Development</button>
+                            </div>
+                            <p>Venenatis eros et, sed commodo risus.<br />
+                                Nullam sit amet laoreet elit..</p>
+                            <button class="btn__learMore">Lear More</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+    </section>
+     <!-- gallery -->
+     <section id="gallery">
+        <div class="container title__content">
+            <span>OUR GALLERY</span>
+            <h3>Successful projects we've done</h3>
+            <div class="gallery__content row">
+                <div class="col-lg-4 col-sm-6">
+                    <a href="./img/c1.jpg" data-lightbox="roadtrip" data-title="Project 1" class="zoom">
+                        <img src="./img/c1.jpg" alt="">
+                        <div class="overlay"></div>
+                        <div class="text__gallery">
+                            <h4>Project 1</h4>
+                            <p>Quisque ut lectus, eros et, sed commodo risus.</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="./img/c2.jpg" data-lightbox="roadtrip" data-title="Project 2" class="zoom">
+                        <img src="./img/c2.jpg" alt="">
+                        <div class="overlay"></div>
+                        <div class="text__gallery">
+                            <h4>Project 2</h4>
+                            <p>Quisque ut lectus, eros et, sed commodo risus.</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="./img/c3.jpg" class="zoom" data-lightbox="roadtrip" data-title="Project 3">
+                        <img src="./img/c3.jpg" alt="">
+                        <div class="overlay"></div>
+                        <div class="text__gallery">
+                            <h4>Project 3</h4>
+                            <p>Quisque ut lectus, eros et, sed commodo risus.</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="./img/c4.jpg" class="zoom" data-lightbox="roadtrip" data-title="Project 4">
+                        <img src="./img/c4.jpg" alt="">
+                        <div class="overlay"></div>
+                        <div class="text__gallery">
+                            <h4>Project 4</h4>
+                            <p>Quisque ut lectus, eros et, sed commodo risus.</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="./img/c5.jpg" class="zoom" data-lightbox="roadtrip" data-title="Project 5">
+                        <img src="./img/c5.jpg" alt="">
+                        <div class="overlay"></div>
+                        <div class="text__gallery">
+                            <h4>Project 5</h4>
+                            <p>Quisque ut lectus, eros et, sed commodo risus.</p>
+                        </div>
+                    </a>
+                </div>
+                <div class="col-lg-4 col-sm-6">
+                    <a href="./img/c6.jpg" class="zoom" data-lightbox="roadtrip" data-title="Project 6">
+                        <img src="./img/c6.jpg" alt="">
+                        <div class="overlay"></div>
+                        <div class="text__gallery">
+                            <h4>Project 6</h4>
+                            <p>Quisque ut lectus, eros et, sed commodo risus.</p>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <div class="brand row">
+                <div class="col-md-2 col-4">
+                    <img src="./img/brand1.png" alt="">
+                </div>
+                <div class="col-md-2 col-4">
+                    <img src="./img/brand3.png" alt="">
+                </div>
+                <div class="col-md-2 col-4">
+                    <img src="./img/brand4.png" alt="">
+                </div>
+                <div class="col-md-2 col-4">
+                    <img src="./img/brand5.png" alt="">
+                </div>
+                <div class="col-md-2 col-4">
+                    <img src="./img/brand6.png" alt="">
+                </div>
+            </div>
+        </div>
+    </section>
+
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
