solution, feedback, news

--- a/index.html
+++ b/index.html
@@ -202,7 +202,6 @@
         </div>
     </section>
     <!-- CHALLENGES -->
-
     <!-- EVERY DAY BRINGS NEW CHALLENGES -->
     <section id="challenge">
         <div class="challenge__container container">
@@ -390,7 +389,185 @@
             </div>
         </div>
     </section>
+    <!-- solution -->
+    <section id="solutions">
+        <div class="container">
+            <div class="row solutions__content">
+                <div class="col-md-6 pb-3">
+                    <img src="./img/about.jpg" alt="">
+                </div>
+                <div class="col-md-6 title__content">
+                    <span>Your success is our success</span>
+                    <h3>Web design, marketing & SEO solutions that get results
+                    </h3>
+                    <div class="progress__content">
+                        <h6>Marketing</h6>
+                        <span class="location1">80%</span>
+                        <div class="progress">
+                            <div class="progress-bar gradient1" style="width:80%"></div>
+                        </div>
+                    </div>
+                    <div class="progress__content">
+                        <h6>Responsive Web design</h6>
+                        <span class="location2">95%</span>
+                        <div class="progress">
+                            <div class="progress-bar gradient2" style="width:95%"></div>
+                        </div>
+                    </div>
+                    <div class="progress__content">
+                        <h6>Analytics</h6>
+                        <span class="location3">60%</span>
+                        <div class="progress">
+                            <div class="progress-bar gradient3" style="width:60%"></div>
+                        </div>
+                    </div>
+                    <div class="progress__content">
+                        <h6>Web Development</h6>
+                        <span class="location4">85%</span>
+                        <div class="progress">
+                            <div class="progress-bar gradient4" style="width:85%"></div>
+                        </div>
+                    </div>
+                </div>
+            </div>
 
+        </div>
+    </section>
+    <!-- FEEDBACK -->
+    <section id="feedback">
+        <div class="container title__content">
+            <span>Happy Clients Feedback</span>
+            <h3>Reviews and Testimonials</h3>
+            <div id="owl-demo1" class="review owl-two owl-carousel owl-theme owl-loaded owl-drag">
+                <div class="item">
+                    <p>Lorem ipsum dolor sit amet elit. Velit beatae laudantium voluptate rem ullam dolore nisi
+                        voluptatibus esse quasi, doloribus tempora.
+                        Dolores molestias adipisci dolo amet!. Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Esse architecto est ea sunt eligendi cum?</p>
+                    <div class="feedback__content">
+                        <div class="image__feedback">
+                            <img src="./img/team1.jpg" alt="">
+                        </div>
+                        <div class="image__content">
+                            <h6>John wilson</h6>
+                            <p>Student</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <p>Lorem ipsum dolor sit amet elit. Velit beatae laudantium
+                        voluptate rem ullam dolore nisi voluptatibus esse quasi, doloribus tempora.
+                        Dolores molestias adipisci dolo amet!.</p>
+                    <div class="feedback__content">
+                        <div class="image__feedback">
+                            <img src="./img/team2.jpg" alt="">
+                        </div>
+                        <div class="image__content">
+                            <h6>Julia sakura</h6>
+                            <p>Student</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <p>Lorem ipsum dolor sit amet elit. Velit beatae laudantium
+                        voluptate rem ullam dolore nisi voluptatibus esse quasi, doloribus tempora.
+                        Dolores molestias adipisci dolo amet!.</p>
+                    <div class="feedback__content">
+                        <div class="image__feedback">
+                            <img src="./img/team3.jpg" alt="">
+                        </div>
+                        <div class="image__content">
+                            <h6>Roy Linderson</h6>
+                            <p>Student</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="item">
+                    <p>Lorem ipsum dolor sit amet elit. Velit beatae laudantium voluptate rem ullam dolore nisi
+                        voluptatibus esse quasi, doloribus tempora.
+                        Dolores molestias adipisci dolo amet!. Lorem ipsum dolor sit amet consectetur
+                        adipisicing elit. Esse architecto est ea sunt eligendi cum?</p>
+                    <div class="feedback__content">
+                        <div class="image__feedback">
+                            <img src="./img/team4.jpg" alt="">
+                        </div>
+                        <div class="image__content">
+                            <h6>Smith Johnson</h6>
+                            <p>Student</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+
+        </div>
+
+    </section>
+    <!-- news -->
+    <section id="news">
+        <div class="container title__content">
+            <span>Latest News</span>
+            <h3>Our insight and articles</h3>
+            <div class="row">
+                <div class="col-md-6 col-lg-4">
+                    <div class="card">
+                        <a href="#" class="zoom"><img class="card-img-top" src="./img/blog1.jpg" alt=""></a>
+                        <div class="card-body">
+                            <p class="card-text">Startup Business</p>
+                            <a href="">
+                                <h4 class="card-title">Hello world!</h4>
+                            </a>
+                        </div>
+                        <div class="card-footer">
+                            <a href="#"><img src="./img/328cc1f23e4a3b73aa60ee6ced1897a1.jpeg" alt=""></a>
+                            <div><span>by</span>
+                                <a href="#">W3Layouts</a>
+                            </div>
+                            <span class="date-card">April 1, 2021</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="card">
+                        <a href="#" class="zoom"><img class="card-img-top" src="./img/blog2.jpg" alt=""></a>
+                        <div class="card-body">
+                            <p class="card-text">Startup Business</p>
+                            <a href="">
+                                <h4 class="card-title">Companies in NY launched a joint project on a three-tower hall
+                                </h4>
+                            </a>
+                        </div>
+                        <div class="card-footer">
+                            <a href="#"><img src="./img/328cc1f23e4a3b73aa60ee6ced1897a1.jpeg" alt=""></a>
+                            <div><span>by</span>
+                                <a href="#">W3Layouts</a>
+                            </div>
+                            <span class="date-card">April 1, 2021</span>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6 col-lg-4">
+                    <div class="card">
+                        <a href="#" class="zoom"><img class="card-img-top" src="./img/blog3.jpg" alt=""></a>
+                        <div class="card-body">
+                            <p class="card-text">Marketing Strategy</p>
+                            <a href="">
+                                <h4 class="card-title">Design breakthrough upgrades the product and ready to launch</h4>
+                            </a>
+                        </div>
+                        <div class="card-footer">
+                            <a href="#"><img src="./img/328cc1f23e4a3b73aa60ee6ced1897a1.jpeg" alt=""></a>
+                            <div><span>by</span>
+                                <a href="#">W3Layouts</a>
+                            </div>
+                            <span class="date-card">April 1, 2021</span>
+                        </div>
+                    </div>
+                </div>
+
+
+            </div>
+        </div>
+    </section>
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
