--- a/index.html
+++ b/index.html
@@ -390,6 +390,78 @@
             </div>
         </div>
     </section>
+      <!-- Subscribe -->
+      <section id="subscribe">
+        <div class="container title__content">
+            <h3>Let’s find out how to work together</h3>
+            <p>Lorem ipsum dolor sit amet elit. Velit beatae rem ullam dolore nisi esse quasi, sit amet. Lorem ipsum
+                dolor sit amet elit. </p>
+            <div class="form-group">
+                <div class="subscribe__icon">
+                    <i class="fa-solid fa-paper-plane"></i>
+                </div>
+                <input type="email" class="form-control" name="email" placeholder="Your Email Address" required>
+                <button class="btn btn-success">Subscribe</button>
+            </div>
+        </div>
+    </section>
+    <!-- footer -->
+    <footer>
+        <div id="footer__content">
+            <div class="container">
+                <div class="row">
+                    <div class="col-12 col-sm-6 col-lg-4">
+                        <a class="logo" href="#">
+                            <i class="fa-solid fa-align-right"></i>
+                            <span>Corp Vision</span>
+                            <span class="title__logo">Vision to your Future</span>
+                        </a>
+                        <p>Lorem ipsum viverra feugiat. Pellen tesque libero ut justo, ultrices in ligula. Semper at
+                            tempufddfel. Lorem ipsum dolor sit amet Semper at elit team advisors.</p>
+                        <div class="social">
+                            <a href="#"><i class="fa-brands fa-facebook-f"></i></a>
+                            <a href="#"><i class="fa-brands fa-twitter"></i></a>
+                            <a href="#"><i class="fa-brands fa-instagram"></i></a>
+                            <a href="#"><i class="fa-brands fa-linkedin-in"></i></a>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-4 pt-3">
+                        <h4>Contact Info</h4>
+                        <p>Address : Corp Vision, 343 marketing, #21 cravel 1st lane street, NY - 62617.</p>
+                        <p>Phone Number : <a href="tel:+1(21) 234 4567">
+                                +1(21) 234 4567</a></p>
+                        <p>Email : <a href="mailto:info@example.com">
+                                info@example.com</a></p>
+                        <p>Support : <a href="mailto:info@support.com">
+                                info@support.com</a></p>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-2 pt-3">
+                        <h4>Categories</h4>
+                        <ul>
+                            <li><a href="#">Marketing Strategy</a></li>
+                            <li><a href="#">Startup Business</a></li>
+                            <li><a href="#">Web development</a></li>
+                        </ul>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-2 pt-3">
+                        <h4>Meta</h4>
+                        <ul>
+                            <li><a href="#">Log in</a></li>
+                            <li><a href="#">Entries feed</a></li>
+                            <li><a href="#">Comments feed</a></li>
+                            <li><a href="#">WordPress.org</a></li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="copy-right">
+            <p>© 2022 Corp Vision All Rights Reserved | WordPress Theme by <a href="#">W3Layouts.</a> </p>
+        </div>
+        <div class="back-to-top cd-top text-replace js-cd-top">
+            <a href="#"><i class="fa-solid fa-angle-up"></i></a>
+        </div>
+    </footer>
 
 
     <!-- Optional JavaScript -->
