--- a/index.html
+++ b/index.html
@@ -203,104 +203,100 @@
     </section>
     <!-- CHALLENGES -->
     <!-- EVERY DAY BRINGS NEW CHALLENGES -->
-    <section id="challenge">
-        <div class="challenge__container container">
+    <section id="challenges">
+        <div class="container">
             <div class="row">
-                <div class="col-lg-12 col-xl-6">
-                    <div class="challenge__title text-left ">
-                        <p>EVERY DAY BRINGS NEW CHALLENGES</p>
-                        <h1>Creative agency focused on <br /> vision, product and people</h1>
-                        <p>Aurabitur id gravida risus. Fusce eget ex fermentum, ultricies nisi ac sed,<br />
-                            lacinia est. Quisque ut lectus consequat, venenatis eros et, sed commodo <br />
-                            risus. Nullam sit amet laoreet elit. Suspendisse non init magnaa velit <br />
-                            efficitur, dolor eget ex fermentum.
-
-                        </p>
-                        <button class="btn btn-success px-5 py-2 my-5 text-white font-weight-bold rounded-lg">Discover
-                            More</button>
-                    </div>
+                <div class="title__content col-lg-6 pb-3">
+                    <span>Every day brings new challenges</span>
+                    <h3>Creative agency focused on vision, product and people</h3>
+                    <p>Aurabitur id gravida risus. Fusce eget ex fermentum, ultricies nisi ac sed,
+                        lacinia est. Quisque ut lectus consequat, venenatis eros et, sed commodo risus. Nullam sit
+                        amet laoreet elit. Suspendisse non init magnaa velit efficitur, dolor eget ex fermentum.</p>
+                    <button class="btn btn-success">Discover More</button>
                 </div>
-                <div class="col-lg-12 col-xl-6">
+                <div class="col-lg-6">
                     <div class="row">
-                        <div class="col-6">
-                            <div class="challenge__content">
-                                <img src="./img/icon1.png" alt="#" />
-                                <p>Our Process</p>
+                        <div class="col-lg-6 col-6">
+                            <div class="card">
+                                <img class="card-img-top" src="img/icon1.png" alt="">
+                                <div class="card-body">
+                                    <h4 class="card-title"><a href="#"> Our Process</a></h4>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <img class="card-img-top" src="img/icon3.png" alt="">
+                                <div class="card-body">
+                                    <h4 class="card-title"><a href="#">UI/UX Design</a></h4>
+                                </div>
                             </div>
                         </div>
-                        <div class="col-6">
-                            <div class="challenge__content">
-                                <img src=" ./img/icon2.png" alt="#" />
-                                <p>How We Help</p>
+                        <div class="col-lg-6 col-6">
+                            <div class="card">
+                                <img class="card-img-top" src="img/icon2.png" alt="">
+                                <div class="card-body">
+                                    <h4 class="card-title"><a href="#">How We Help</a></h4>
+                                </div>
+                            </div>
+                            <div class="card">
+                                <img class="card-img-top" src="img/icon4.png" alt="">
+                                <div class="card-body">
+                                    <h4 class="card-title"><a href="#">Creative Ideas</a></h4>
+                                </div>
                             </div>
                         </div>
-                        <div class="col-6">
-                            <div class="challenge__content">
-                                <img src="./img/icon3.png" alt="#" />
-                                <p>UI/UX Design</p>
-                            </div>
-                        </div>
-                        <div class="col-6">
-                            <div class="challenge__content">
-                                <img src="./img/icon4.png" alt="#" />
-                                <p>Creative Ideas</p>
-                            </div>
-                        </div>
-
 
                     </div>
-
                 </div>
 
             </div>
-
         </div>
-
     </section>
-    <!-- sevice -->
-    <section id="sevice">
-        <div class="sevice__title">
-            <h1>Always there for your care, our Services</h1>
-        </div>
-        <div class="sevice__select">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-4 col-lg-6 col-md-12">
-                        <div class="sevice__card">
-                            <div class="sevice__card-image">
-                                <img src="./img/s1.jpg" alt="#">
-                                <button class="btn__sevice">Work Expertise</button>
-                            </div>
-                            <p>Venenatis eros et, sed commodo risus.<br />
-                                Nullam sit amet laoreet elit..</p>
-                            <button class="btn__learMore">Lear More</button>
+    <!-- Services -->
+    <section id="services">
+        <h3>Always there for your care, our Services</h3>
+        <div class="container">
+            <div class="row">
+                <div class="col-lg-4 col-sm-6 mb-3">
+                    <div class="card">
+                        <a href="#"><img class="card-img-top" src="./img/s1.jpg" alt=""></a>
+                        <div class="card-body">
+                            <a href="#">
+                                <h4 class="card-title">Work Expertise</h4>
+                            </a>
+                            <p class="card-text">Venenatis eros et, sed commodo risus. Nullam sit amet laoreet elit..
+                            </p>
+                            <a href="#">Learn More</a>
                         </div>
                     </div>
-                    <div class="col-xl-4 col-lg-6 col-md-12">
-                        <div class="sevice__card">
-                            <div class="sevice__card-image">
-                                <img src="./img/s2.jpg" alt="#">
-                                <button class="btn__sevice">Product Development</button>
+                </div>
+                <div class="col-lg-4 col-sm-6 mb-3">
+                    <div class="card">
+                        <a href="#"><img class="card-img-top" src="./img/s2.jpg" alt=""><a href="#"></a>
+                            <div class="card-body">
+                                <a href="#">
+                                    <h4 class="card-title">Product Development</h4>
+                                </a>
+                                <p class="card-text">Venenatis eros et, sed commodo risus. Nullam sit amet laoreet
+                                    elit..
+                                </p>
+                                <a href="#">Learn More</a>
                             </div>
-                            <p>Venenatis eros et, sed commodo risus.<br />
-                                Nullam sit amet laoreet elit..</p>
-                            <button class="btn__learMore">Lear More</button>
-                        </div>
                     </div>
-                    <div class="col-xl-4 col-lg-6 col-md-12">
-                        <div class="sevice__card">
-                            <div class="sevice__card-image">
-                                <img src="./img/s3.jpg" alt="#">
-                                <button class="btn__sevice">Softwave Development</button>
-                            </div>
-                            <p>Venenatis eros et, sed commodo risus.<br />
-                                Nullam sit amet laoreet elit..</p>
-                            <button class="btn__learMore">Lear More</button>
+                </div>
+                <div class="col-lg-4 col-sm-6 mb-3">
+                    <div class="card">
+                        <a href="#"><img class="card-img-top" src="./img/s3.jpg" alt=""></a>
+                        <div class="card-body">
+                            <a href="#">
+                                <h4 class="card-title">Software Development</h4>
+                            </a>
+                            <p class="card-text">Venenatis eros et, sed commodo risus. Nullam sit amet laoreet elit..
+                            </p>
+                            <a href="#">Learn More</a>
                         </div>
                     </div>
                 </div>
             </div>
-
         </div>
     </section>
     <!-- gallery -->
